--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cross-fetch": "^2.2.3",
     "css-loader": "^1.0.1",
     "file-loader": "^2.0.0",
+    "font-awesome": "^4.7.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.10.0",
