--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server --open --mode development",
+    "start": "webpack-dev-server --open --mode development ",
     "build": "webpack",
     "test": "jest"
   },
@@ -14,7 +14,6 @@
     "@babel/preset-env": "^7.1.5",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "cross-fetch": "^2.2.3",
     "css-loader": "^1.0.1",
     "file-loader": "^2.0.0",
@@ -41,12 +40,18 @@
     "babel-jest": "^23.6.0",
     "css-hot-loader": "^1.4.2",
     "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.7.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^23.6.0",
     "mini-css-extract-plugin": "^0.4.4",
     "react-addons-test-utils": "^15.6.2",
     "react-test-renderer": "^16.6.1",
+    "redux-devtools-extension": "^2.13.5",
     "redux-mock-store": "^1.5.3",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
+  },
+  "resolutions": {
+    "babel-core": "7.0.0-bridge.0"
   }
 }
